Fixes spacing

--- a/src/Containers/App/App.scss
+++ b/src/Containers/App/App.scss
@@ -189,7 +189,7 @@ a:link {
   
 }
 .fa {
-  margin-left: -12px;
+  margin-left: 12px;
   margin-right: 8px;
   background: whitesmoke;
   color: black; 
